--- a/env.example
+++ b/env.example
@@ -2,5 +2,6 @@ REACT_APP_API_TOKEN=
 REACT_APP_API_URL_ADMIN=
 REACT_APP_API_URL_GRAPHQL=
 GATSBY_URL=
+GATSBY_WORDPRESS_SITE_URL=
 
 //Create 2 file .env => .env.development   &&   .env.production
